--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
+
   <body>
+    <!--Title -->
+    <h1>Discover hidden places in the world around you</h1>
+
+    <!--Video-->
+    <h3>Download Excursion (Coming soon!)</h3>
+    <video src="resources/excursion.mp4"></video>
+
+    <!--Content-->
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/camp.jpg">
+    <img src="resources/phone.png">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <h3>Download Excursion (Coming soon!)</h3>
 
   </body>
 </html>
