Add style sheet

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Discover hidden places in the world around you</h1>
 
     <!--Video-->
-    <h3>Download Excursion (Coming soon!)</h3>
+    <h3 class="caption">Download Excursion (Coming soon!)</h3>
     <video src="resources/excursion.mp4"></video>
 
     <!--Content-->
@@ -20,7 +20,9 @@
     <img src="resources/camp.jpg">
     <img src="resources/phone.png">
     <h2>Coming Soon for iPhone and Android</h2>
-    <h3>Download Excursion (Coming soon!)</h3>
+    <h3 class="caption">Download Excursion (Coming soon!)</h3>
+
+    <footer>© Excursion</footer>
 
   </body>
 </html>
