--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <h1>Discover hidden places in the world around you</h1>
 
     <!--Video-->
-    <h3 class="caption">Download Excursion (Coming soon!)</h3>
-    <video src="resources/excursion.mp4"></video>
+    <h3 class="caption"><a href="#">Download Excursion (Coming soon!)</a></h3>
+    <video autoplay loop>
+      <source src="resources/excursion.mp4" type="video/mp4">
+    </video>
 
     <!--Content-->
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="resources/camp.jpg">
+    <img src="resources/camp.jpg"><br><br>
     <img src="resources/phone.png">
     <h2>Coming Soon for iPhone and Android</h2>
-    <h3 class="caption">Download Excursion (Coming soon!)</h3>
+    <h3 class="caption"><a href="#">Download Excursion (Coming soon!)</a></h3>
 
     <footer>© Excursion</footer>
 
